--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="aukde.food.gestordepedidos">
 
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the "MyLocation" functionality.
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -16,17 +22,39 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <receiver android:name=".paquetes.Receptor.AcceptReceiver" android:enabled="true"/>
-        <receiver android:name=".paquetes.Receptor.CancelReceiver" android:enabled="true"/>
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".paquetes.Mapas.MapaClientePorLlamada"
+            android:label="@string/title_activity_mapa_cliente_por_llamada"></activity>
+        <activity android:name=".paquetes.Actividades.Notificacion" />
+
+        <receiver
+            android:name=".paquetes.Receptor.AcceptReceiver"
+            android:enabled="true" />
+        <receiver
+            android:name=".paquetes.Receptor.CancelReceiver"
+            android:enabled="true" />
 
         <service android:name=".paquetes.Servicios.MyFirebaseMessagingClient">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
 
-        <activity android:name=".paquetes.Actividades.Pedidos.DetallePedidoAukdeliver"></activity>
-        <activity android:name=".paquetes.Actividades.Pedidos.ListaPedidosAukdeliver"
+        <activity android:name=".paquetes.Actividades.Pedidos.DetallePedidoAukdeliver" />
+        <activity
+            android:name=".paquetes.Actividades.Pedidos.ListaPedidosAukdeliver"
             android:parentActivityName=".paquetes.Menus.MenuAukdeliver" />
         <activity android:name=".paquetes.Actividades.Pedidos.DetallePedido" />
         <activity
@@ -68,10 +96,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDh7U0aNiNGd0oLz7CLzdluscfw2ojSnsc" />
     </application>
 
 </manifest>
