--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation 'com.airbnb.android:lottie:3.4.0'
     implementation 'com.github.florent37:shapeofview:1.3.2'
     implementation 'com.github.GrenderG:Toasty:1.4.2'
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"
