--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'com.github.florent37:shapeofview:1.3.2'
     implementation 'com.github.GrenderG:Toasty:1.4.2'
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"
+    implementation 'com.firebase:geofire-android:2.2.0'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'androidx.navigation:navigation-fragment:2.1.0'
     implementation 'androidx.navigation:navigation-ui:2.1.0'
