--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -20,7 +21,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".paquetes.Actividades.Pedidos.AsignarRepartidor"></activity>
+        <activity android:name=".paquetes.Menus.PerfilAdmin"
+            android:parentActivityName=".paquetes.Menus.MenuAdmin"></activity>
+
+        <service
+            android:name=".paquetes.Servicios.ServiceMonitoreo"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".paquetes.Actividades.Pedidos.AsignarRepartidor" />
         <activity android:name=".paquetes.Actividades.Pedidos.EditarPedido" />
 
         <meta-data
@@ -30,6 +39,7 @@
         <activity
             android:name=".paquetes.Mapas.MapaClientePorLlamada"
             android:label="@string/title_activity_mapa_cliente_por_llamada" />
+        <activity android:name=".paquetes.Mapas.MonitoreoRepartidor" />
         <activity android:name=".paquetes.Actividades.Notificacion" />
 
         <receiver
