--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
             android:enabled="true"
             android:exported="false" />
 
+        <service
+            android:name=".paquetes.Servicios.JobServiceMonitoreo" android:permission="android.permission.BIND_JOB_SERVICE"/>
+
         <activity android:name=".paquetes.Actividades.Pedidos.AsignarRepartidor" />
         <activity android:name=".paquetes.Actividades.Pedidos.EditarPedido" />
 
