--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,13 +26,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".paquetes.Menus.PerfilAdmin"
+        <activity android:name=".paquetes.Menus.Perfiles.PerfilAdmin"
             android:parentActivityName=".paquetes.Menus.MenuAdmin"></activity>
 
-        <service
-            android:name=".paquetes.Servicios.ServiceMonitoreo"
-            android:enabled="true"
-            android:exported="false" />
+        <activity android:name=".paquetes.Menus.Perfiles.PerfilAukdeliver"
+            android:parentActivityName=".paquetes.Menus.MenuAukdeliver"></activity>
 
         <service
             android:name=".paquetes.Servicios.JobServiceMonitoreo" android:permission="android.permission.BIND_JOB_SERVICE"/>
