--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
          location permissions for the "MyLocation" functionality.
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
@@ -17,6 +18,8 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
+
+
 
 
     <application
@@ -54,6 +57,8 @@
         <receiver
             android:name=".paquetes.Receptor.CancelReceiver"
             android:enabled="true" />
+
+        <receiver android:name=".paquetes.Receptor.NetworkReceiver" android:enabled="true" android:exported="true"/>
 
         <service android:name=".paquetes.Servicios.MyFirebaseMessagingClient">
             <intent-filter>
