--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Aug 24 11:38:34 COT 2020
-sdk.dir=C\:\\Users\\Usuario\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Danny\\AppData\\Local\\Android\\Sdk
